# docs/swagger-spec.yaml
@@ -115,9 +115,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetSettingsResponse"
       tags: *a2
-  /api/user/set-settings:
+  /api/user/set-personal-settings:
     patch:
-      operationId: UserController_setSettings
+      operationId: UserController_setPersonalSettings
       summary: ""
       description: ""
       parameters: []
@@ -127,7 +127,21 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SetSettingsResponse"
+                $ref: "#/components/schemas/SetPersonalSettingsResponse"
+      tags: *a2
+  /api/user/set-notification-settings:
+    patch:
+      operationId: UserController_setNotificationSettings
+      summary: ""
+      description: ""
+      parameters: []
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SetPersonalSettingsResponse"
       tags: *a2
   /api/user/freeze-account:
     patch:
@@ -513,7 +527,7 @@ components:
           type: object
       required:
         - settings
-    SetSettingsResponse:
+    SetPersonalSettingsResponse:
       type: object
       properties: {}
     FreezeAccountResponse:
