# src/modules/user/dto/set-personal-settings/response.dto.ts
@@ -1,0 +1,1 @@
+export class SetPersonalSettingsResponse {}
