# src/modules/user/dto/set-settings/response.dto.ts
@@ -1,1 +1,0 @@
-export class SetSettingsResponse {}
